fix 管理脚本